# kevoree-modeling-framework

./: .gitignore  DOC.md  LICENSE_HEADER  MachineLearninAlg.rtf  README.markdown  README.md  TODO_AFTERNOON  install.sh  pom.xml  release.properties  releaseScript.sh
cpp/org.kevoree.modeling.cpp.generator/src/main/resources/: CMakeLists.txt  main.cpp
cpp/org.kevoree.modeling.cpp.generator/src/main/resources/metamodel/: planrouge.ecore
cpp/org.kevoree.modeling.cpp.generator/src/main/resources/templates/: cmake.vm  visitor.vm
org.kevoree.modeling.cpp.microframework/src/main/cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  check_leak.sh  clean_cmake_files.sh  cmake_install.cmake  compile.sh  trace.example
org.kevoree.modeling.cpp.microframework/src/main/cpp/cmake_modules/: FindSparsehash.cmake
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/: KMFContainer.h  ModelCloner.h  ModelSerializer.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/compare/: ModelCompare.cpp  ModelCompare.h  ModelCompareVisitors.cpp  ModelCompareVisitors.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/container/: KMFContainerImpl.cpp  KMFContainerImpl.h  KMFContainerVisitors.cpp  KMFContainerVisitors.h  RemoveFromContainerCommand.h  TotracesVisitors.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/events/: ModelElementListener.h  ModelEvent.cpp  ModelTreeListener.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/json/: JSONModelLoader.cpp  JSONModelLoader.h  JSONModelSerializer.cpp  JSONModelSerializer.h  Lexer.cpp  Lexer.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/trace/: DefaultTraceConverter.cpp  DefaultTraceConverter.h  Event2Trace.cpp  Event2Trace.h  ModelTrace.cpp  ModelTrace.h  TraceConverter.h  TraceSequence.cpp  TraceSequence.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/utils/: Logger.cpp  Logger.h  ModelVisitor.cpp  ModelVisitor.h  Singleton.h  Utils.h  Uuid.cpp  Uuid.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/microframework/api/xmi/: XMIModelLoader.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/org/kevoree/modeling/api/: KMFContainer.cpp  KMFContainer.h  KMFFactory.cpp  KMFFactory.h  ModelCloner.cpp  ModelCloner.h  ModelLoader.cpp  ModelLoader.h  ModelSerializer.cpp  ModelSerializer.h  main.cpp
org.kevoree.modeling.cpp.microframework/src/main/cpp/org/kevoree/modeling/api/compare/: ModelCompare.cpp  ModelCompare.h  ModelCompareVisitors.cpp
org.kevoree.modeling.cpp.microframework/src/main/cpp/org/kevoree/modeling/api/container/: KMFContainerImpl.cpp  KMFContainerImpl.h  KMFContainerVisitors.cpp  KMFContainerVisitors.h  RemoveFromContainerCommand.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/org/kevoree/modeling/api/events/: ModelElementListener.cpp  ModelElementListener.h  ModelEvent.cpp  ModelEvent.h  ModelTreeListener.cpp  ModelTreeListener.h
org.kevoree.modeling.cpp.microframework/src/main/cpp/org/kevoree/modeling/api/json/: JSONModelLoader.cpp  (+6 more)
org.kevoree.modeling.cpp.microframework/src/main/cpp/src_tests/: KMFContainer.cpp  KMFFactory.cpp  ModelCloner.cpp  ModelLoader.cpp  ModelSerializer.cpp  TraceConverter.cpp  main.cpp  tests  trace.example  trace.json
org.kevoree.modeling.cpp.microframework/src/main/cpp/src_tests/events/: ModelElementListener.cpp  ModelTreeListener.cpp
org.kevoree.modeling.cpp.microframework/src/main/cpp/src_tests/utils/: ModelAttributeVisitor.cpp  ModelTracker.cpp  ModelVisitor.cpp
(+2942 files in other folders)
